--- a/ExemploHostBuilderDIConsoleApp/ExemploHostBuilderDIConsoleApp.csproj
+++ b/ExemploHostBuilderDIConsoleApp/ExemploHostBuilderDIConsoleApp.csproj
@@ -6,4 +6,9 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+	</ItemGroup>
+
 </Project>
